--- a/MusicRecorder/Resources/layout/Main.axml
+++ b/MusicRecorder/Resources/layout/Main.axml
@@ -24,4 +24,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/btnPlayback" />
+	<Button
+		android:text="MIX TRACKS"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:id="@+id/btnMixTracks" />
 </LinearLayout>
